# InstallerDeepForge-Toolset

./: .gitignore  BuildProject.bat  BuildProject.sh  CMakeLists.txt  CMakeSettings.json  Colors.txt  DeepForge-UpdateManager.service  DeepForgeToolset.desktop  Info.plist  InstallLibraries.py  InstallLibraries.sh  InstallLibraries_Linux.sh  InstallLibraries_macOS.sh  InstallPackages.py  InstallPackages.sh  InstallerDeepForge-Toolset  InstallerDeepForge-Toolset.code-workspace  InstallerDeepForge_Toolset  Microsoft.DesktopAppInstaller_8wekyb3d8bbwe.msixbundle  README.md  Versions.db  applications.md  com.DeepForge-UpdateManager.plist  resource.res
.github/workflows/: CI.yml  CI_dev.yml  CI_master.yml  InstallerDeepForgeToolset_CI.yml
build_linux/: Makefile
cmake/: CompileResources.cmake  DownloadDependecies.cmake
include/: Installer_Linux.hpp  Installer_Windows.hpp  Installer_macOS.hpp  Progressbar.hpp
include/Database/: DatabaseAPI.hpp  DatabaseConnect.hpp
include/InstallerDeepForge-Toolset/: Advanced.hpp  InstallerDeepForge-Toolset.hpp  Linux.hpp  Windows.hpp  macOS.hpp
include/Logger/: Logger.hpp
include/Progressbar/: Progressbar.hpp
include/curl/: curl.h
src/: DatabaseConnect.cpp  DatabaseConnect.hpp  InstallerDeepForge-Toolset.cpp  InstallerDeepForge_Toolset.cpp  Linux.cpp  Windows.cpp  macOS.cpp  resource.rc  resource.res
src/include/: Client_POSIX.hpp  Client_UNIX.hpp  Installer_Linux.hpp  Installer_Windows.hpp  Installer_macOS.hpp  Logger.hpp  Progressbar.hpp
src/lib/: libZipper.1.0.4.dylib
src/locale/: locale_en.json  locale_ru.json
